--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,19 +4,31 @@ version = "0.1.0"
 edition = "2024"
 
 [dependencies]
-ark-bn254 = "0.4.0"
-ark-bls12-377 = "0.4"
-ark-bw6-761 = "0.4"
-ark-ec = "0.4.0"
-ark-ff = "0.4.0"
-ark-groth16 = { version = "0.4", features = ["r1cs"] }
-ark-r1cs-std = "0.4.0"
-ark-relations = "0.4.0"
-ark-snark = "0.4.0"
+# Core arkworks libraries - ALL must be version 0.4.x
+ark-ff = "0.4"
+ark-ec = "0.4"
+ark-poly = "0.4"
+ark-serialize = "0.4"
+ark-std = { version = "0.4", features = ["std"] }
+ark-relations = "0.4"
+ark-snark = "0.4"
+
+# Curve implementations
+ark-bls12-377 = "0.4"  # Inner curve for Groth16
+ark-bw6-761 = "0.4"    # Outer curve for WE
+
+# SNARK systems
+ark-groth16 = "0.4"
+
+# Crypto primitives  
+blake3 = "1.5"         # Hash function for KDF
+aes-gcm = "0.10"       # AEAD encryption
+
+# Utilities
 rand = "0.8"
-blake2 = "0.10"
-aes-gcm = "0.10.3"
-sha2 = "0.10.9"
-blake3 = "1"
-anyhow = "1"
-ark-crypto-primitives = { version = "0.4", default-features = false, features = ["snark"] }
+anyhow = "1.0"
+hex = "0.4"            # For hex encoding in display
+
+[features]
+default = []
+std = ["ark-std/std"]
