--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,5 +10,6 @@ ark-ec = "0.5.0"
 ark-ff = "0.5.0"
 ark-poly = "0.5.0"
 ark-serialize = "0.5.0"
+ark-std = "0.5.0"
 rand = "0.9.2"
 sha2 = "0.10.9"
